fixed scrollbar position

--- a/src/less/framework/layout.less
+++ b/src/less/framework/layout.less
@@ -1,6 +1,11 @@
 * {
     box-sizing: border-box;
 }
+body {
+    &.covered {
+        overflow: hidden;
+    }
+}
 .page {
     min-height: 100vh;
 }
