--- a/src/less/framework/page-intro.less
+++ b/src/less/framework/page-intro.less
@@ -58,18 +58,17 @@
         }
     }
     .overlay-wrapper {
-        padding: 0;
+        height: 100vh;
+        overflow: auto;
+        background: @white;
+    }
+    .entries-wrapper {
+        padding: 0 2rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 100vh;
-    }
-    .entries-wrapper {
-        padding: 0 2rem;
-        max-height: 100vh;
-        overflow: auto;
-        background: @white;
+        min-height: 100vh;
     }
     #overlay_button {
         position: fixed;
